@@ -2,6 +2,9 @@ Cascading Change Log
 
 unreleased
 
+  Added configuration propety allowing job polling interval to be configured per c.f.Flow via
+  Flow#setJobPollingInterval().
+
   Updated ant build to not hard-code hadoop/lib sub-dir names.
 
 1.0.13
